updated swagger, env and added logs
