# docs/swagger.json
@@ -3,13 +3,52 @@
     "info": {
         "description": "API for managing currency wallets and transactions",
         "title": "Currency wallet API",
-        "termsOfService": "https://example.com",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/v1/balance": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Получает текущий баланс пользователя.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "wallet"
+                ],
+                "summary": "Get user balance",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.BalanceResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/login": {
             "post": {
                 "description": "Авторизация пользователя с возвратом JWT-токена для дальнейших запросов",
@@ -96,43 +135,13 @@
                 }
             }
         },
-        "/wallet/balance": {
-            "get": {
-                "description": "Получает текущий баланс пользователя.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "wallet"
-                ],
-                "summary": "Get user balance",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.BalanceResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/wallet/deposit": {
+        "/api/v1/wallet/deposit": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Пополняет баланс пользователя на указанную сумму.",
                 "consumes": [
                     "application/json"
@@ -183,8 +192,13 @@
                 }
             }
         },
-        "/wallet/exchange": {
+        "/api/v1/wallet/exchange": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Обменивает одну валюту на другую по актуальному курсу.",
                 "consumes": [
                     "application/json"
@@ -235,7 +249,7 @@
                 }
             }
         },
-        "/wallet/rates": {
+        "/api/v1/wallet/rates": {
             "get": {
                 "description": "Получает актуальные курсы валют для различных валютных пар.",
                 "consumes": [
@@ -264,8 +278,13 @@
                 }
             }
         },
-        "/wallet/withdraw": {
+        "/api/v1/wallet/withdraw": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Выводит указанную сумму со счета пользователя.",
                 "consumes": [
                     "application/json"
@@ -503,6 +522,13 @@
                     "type": "number"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
